k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: innovation-api-deployment
spec:
  selector:
    matchLabels:
      app: innovation-api-pod
  template:
    metadata:
      labels:
        app: innovation-api-pod
    spec:
      containers:
        - name: innovation-api-container
          image: azdockeracr.azurecr.io/innovation-api
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: web
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: innovation-api-service
spec:
  type: ClusterIP
  selector:
    app: innovation-api-pod
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
