k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ps-innovation-api-ingress
spec:
  ingressClassName: azure-application-gateway
  tls:
    - secretName: myself123
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: innovation-api-service
                port:
                  number: 80
